--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,16 @@
 layout: base.html
 title: Home
 ---
-<div class="max-w-lg mx-auto mt-6 px-4 text-center">
-    <h1 class="font-semibold text-3xl">It’s (j)ust (e)leventy and (t)ailwind</h1>
-    <p>…OK, and a few other things; it's still *really* small though.</p>
+
+<div class="flex flex-col h-screen">
+  {% include "./_includes/nav.html" %}
+  <main id="main" class="flex-1 overflow-y-auto">
+    <div>{% include "./_includes/hero.html" %}</div>
+    <div>{% include "./_includes/content.html" %}</div>
+    <div>{% include "./_includes/features.html" %}</div>
+    <div>{% include "./_includes/examples.html" %}</div>
+    <div>{% include "./_includes/logos.html" %}</div>
+    <div>{% include "./_includes/contact.html" %}</div>
+    <div>{% include "./_includes/footer.html" %}</div>
+  </main>
 </div>
-<p class="flex items-center justify-center max-w-md mt-6 mx-auto px-4">
-    <a href="https://11ty.dev/" class="bg-gray-900 inline-block mr-6"></a>
-    and
-    <a href="https://tailwindcss.com/" class="ml-6"></a>
-</p>
-<p class="flex justify-center max-w-md mt-16 mx-auto">
-    <a href="https://github.com/marcamos/jet#readme" class="mr-6 underline">View on GitHub</a>
-    <a href="https://marcamos-jet.netlify.com/" class="underline">View on Netlify</a>
-</p>
