Add all site sections

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,16 @@ title: Home
 ---
 
 <div class="flex flex-col h-screen">
-  {% include "./_includes/nav.html" %}
-  <main id="main" class="flex-1 overflow-y-auto">
-    <div>{% include "./_includes/hero.html" %}</div>
-    <div>{% include "./_includes/content.html" %}</div>
-    <div>{% include "./_includes/features.html" %}</div>
-    <div>{% include "./_includes/examples.html" %}</div>
-    <div>{% include "./_includes/logos.html" %}</div>
-    <div>{% include "./_includes/contact.html" %}</div>
-    <div>{% include "./_includes/footer.html" %}</div>
-  </main>
+    {% include "./_includes/nav.html" %}
+    <main id="main" class="flex-1 overflow-y-auto">
+        <div>{% include "./_includes/hero.html" %}</div>
+        <div>{% include "./_includes/intro.html" %}</div>
+        <div>{% include "./_includes/quality.html" %}</div>
+        <div>{% include "./_includes/worksite.html" %}</div>
+        <div>{% include "./_includes/team.html" %}</div>
+        <div>{% include "./_includes/materials.html" %}</div>
+        <div>{% include "./_includes/security.html" %}</div>
+        <div>{% include "./_includes/contact.html" %}</div>
+    </main>
+    {% include "./_includes/footer.html" %}
 </div>
