Add images to site

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,10 @@ title: Home
         <div>{% include "./_includes/hero.html" %}</div>
         <div>{% include "./_includes/intro.html" %}</div>
         <div>{% include "./_includes/quality.html" %}</div>
-        <div>{% include "./_includes/worksite.html" %}</div>
         <div>{% include "./_includes/team.html" %}</div>
         <div>{% include "./_includes/materials.html" %}</div>
         <div>{% include "./_includes/security.html" %}</div>
         <div>{% include "./_includes/contact.html" %}</div>
+        <div>{% include "./_includes/footer.html" %}</div>
     </main>
-    {% include "./_includes/footer.html" %}
 </div>
