Add new sections

--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,15 @@ title: Home
 ---
 
 <div class="flex flex-col h-screen">
-    {% include "./_includes/nav.html" %}
-    <main id="main" class="flex-1 overflow-y-auto">
-        <div>{% include "./_includes/hero.html" %}</div>
-        <div>{% include "./_includes/intro.html" %}</div>
-        <div>{% include "./_includes/quality.html" %}</div>
-        <div>{% include "./_includes/team.html" %}</div>
-        <div>{% include "./_includes/materials.html" %}</div>
-        <div>{% include "./_includes/security.html" %}</div>
-        <div>{% include "./_includes/contact.html" %}</div>
-        <div>{% include "./_includes/footer.html" %}</div>
-    </main>
+  {% include "./_includes/nav.html" %}
+  <main id="main" class="flex-1 overflow-y-auto">
+    <div>{% include "./_includes/hero.html" %}</div>
+    <div>{% include "./_includes/calorifurge.html" %}</div>
+    <div>{% include "./_includes/intro.html" %}</div>
+    <div>{% include "./_includes/team.html" %}</div>
+    <div>{% include "./_includes/quality.html" %}</div>
+    <div>{% include "./_includes/establishment.html" %}</div>
+    <div>{% include "./_includes/contact.html" %}</div>
+    <div>{% include "./_includes/footer.html" %}</div>
+  </main>
 </div>
