Add new sections energy

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@ title: Home
     <div>{% include "./_includes/intro.html" %}</div>
     <div>{% include "./_includes/team.html" %}</div>
     <div>{% include "./_includes/quality.html" %}</div>
+    <div>{% include "./_includes/diff.html" %}</div>
     <div>{% include "./_includes/establishment.html" %}</div>
     <div>{% include "./_includes/contact.html" %}</div>
     <div>{% include "./_includes/footer.html" %}</div>
